# csvtools

./: .gitignore  ChangeLog  INSTALL  Makefile.am  Makefile.in  README  README.md  aclocal.m4  config.h.in  configure  configure.ac
.github/workflows/: c-cpp.yml  coverage.yml
cov/: Makefile.cov  coverage.mk
coverage/: Makefile
examples/: aggr.csv  escape.csv  numbers.csv  persons.csv  test.csv
src/: ColFunc.cc  ColFunc.h  ColTypes.cc  ColTypes.h  CommandLine.cc  CommandLine.h  CsvCell.cc  CsvCell.h  CsvClasses.h  CsvIStream.cc  CsvIStream.h  CsvPipe.cc  CsvPipe.h  CsvRow.cc  CsvRow.h  CsvStream.h  DefaultCommandLine.cc  DefaultCommandLine.h  Delimiters.cc  Delimiters.h  JoinAlgorithm.cc  JoinAlgorithm.h  LogConfig.cc  LogConfig.h  Makefile.am  Makefile.in  MultiSetJoinAlgorithm.cc  MultiSetJoinAlgorithm.h  Numeric.cc  Numeric.h  RowFilter.cc  RowFilter.h  RowFunc.cc  RowFunc.h  RowOrderKey.cc  RowOrderKey.h  csvaggr.cc  csvconv.cc  csvext.cc  csvfilter.cc  (+10 more)
tests/: ColIvalV_ctor_test.cc  ColIvalV_extract_ival_test.cc  ColIval_ctor_test.cc  CommandLine_test.cc  CsvCell_ctor_test.cc  CsvCell_decimal_test.cc  CsvCell_less_test.cc  CsvCell_parse_test.cc  CsvCell_print_test.cc  CsvCell_test.cc  CsvIStream_test.cc  CsvRow_concat_test.cc  CsvRow_io_test.cc  Makefile.am  stdrowfuncs_test.cc  strsplit_test.cc
tests/app/: Makefile.am  cmdline_test.sh  csvaggr_a0x_test.sh  csvconv_4_test.sh  csvext_test.sh  csvfilter_r1x_test.sh  csvjoin_jtx_test.sh  csvpivot_test.sh  csvproj_help.txt.in  csvproj_help_test.sh  csvproj_ignore.txt  csvproj_p0_test.sh  csvproj_p1_test.sh  csvproj_version.txt.in  csvsort_k1x_test.sh  t0.csv  t0_extadd.csv  t0_extadd2.csv  t0_extsub.csv  t0_id1.csv  t0_proj1.csv  t0_sort1d.csv  t0_sort1dn.csv  t0_sort1n.csv  t0_sort1x.csv  t1.csv  t1_aggr0cc.csv  t1_aggr0cnt.csv  t1_aggr0first.csv  t1_aggr0last.csv  t1_aggr0mmrev.csv  t1_aggr0mn.csv  t1_aggr0mx.csv  t1_aggr0s.csv  t1_esc0.csv  t1_filt01.csv  t1_filt02.csv  t1_filt1a.csv  t1_filtne.csv  t1_sort1e0d.csv  (+26 more)
