AM_DEFAULT_SOURCE_EXT = .cc

TESTS = \
	CsvCell_decimal_test \
	CsvCell_less_test \
	CsvCell_parse_test \
	CsvCell_print_test

check_PROGRAMS = \
	CsvCell_decimal_test \
	CsvCell_less_test \
	CsvCell_parse_test \
	CsvCell_print_test

CLEANFILES = 

BUILT_SOURCES = 

AM_CXXFLAGS = -I${top_srcdir}/src
LDADD = ../src/libcsvtools.a

