AM_DEFAULT_SOURCE_EXT = .cc

TESTS = \
	ColIval_ctor_test \
	ColIvalV_ctor_test \
	ColIvalV_extract_ival_test \
	CsvCell_decimal_test \
	CsvCell_less_test \
	CsvCell_parse_test \
	CsvCell_print_test \
	CsvRow_io_test \
	CsvRow_concat_test

check_PROGRAMS = \
	ColIval_ctor_test \
	ColIvalV_ctor_test \
	ColIvalV_extract_ival_test \
	CsvCell_decimal_test \
	CsvCell_less_test \
	CsvCell_parse_test \
	CsvCell_print_test \
	CsvRow_io_test \
	CsvRow_concat_test

CLEANFILES = 

BUILT_SOURCES = 

AM_CXXFLAGS = -I${top_srcdir}/src
LDADD = ../src/libcsvtools.a

